feat(forge20): update to new Pixelmon API for specs